fix: :lipstick: fix transactions table overflow

--- a/src/css/typography.scss
+++ b/src/css/typography.scss
@@ -59,3 +59,7 @@ a {
 .work-break-all {
     word-break: break-all;
 }
+
+.white-space-pre-line {
+    white-space: pre-line;
+}
